<resources>
    <string name="app_name">Gemini Spacewalk</string>
    <string name="intent_label">Open Gemini Capsule</string>

    <string name="general_cancel">Cancel</string>

    <string name="dialog_input_title">Input Request</string>
    <string name="dialog_input_hint">Enter text…</string>
    <string name="dialog_input_server_name">%s asks for your input</string>
    <string name="dialog_input_submit">Send</string>

    <string name="title_bookmarks">Your bookmarks</string>
    <string name="title_contents">Page contents</string>
    <string name="title_history">Tab history</string>

    <string name="menu_link_copy">Copy link address</string>
    <string name="menu_link_copy_text">Copy link text</string>
    <string name="clipboard_label_link">Copied URI</string>
    <string name="field_uri_hint">Enter Gemini URL here…</string>
    <string name="field_query_hint">Enter your input here…</string>
    <string name="desc_previous_page">Previous Page</string>
    <string name="desc_add_remove_bookmark">Add/Remove Bookmark</string>
    <string name="desc_show_contents">Show Contents</string>
    <string name="desc_visit_homepage">Visit Homepage</string>
    <string name="desc_more_options">More Options</string>
</resources>